thai-gdc/kubernetes/dga/adminer.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  containers:
  - image: adminer
    name: adminer
    ports:
    - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
  name: adminer
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: adminer
  type: ClusterIP
