thai-gdc/kubernetes/dga/deploy-solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ckan-solr
  name: ckan-solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckan-solr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ckan-solr
    spec:
      securityContext:
        runAsUser: 8983
        runAsGroup: 65533
        fsGroup: 8983
      containers:
      - image: 759076157369.dkr.ecr.ap-southeast-1.amazonaws.com/ckan-solr:v1
        imagePullPolicy: IfNotPresent
        name: ckan-solr
        ports:
        - containerPort: 8983
        resources: {}
        readinessProbe:
            tcpSocket:
              port: 8983
        livenessProbe:
            tcpSocket:
              port: 8983
        volumeMounts:
        - mountPath: /opt/solr/server/solr/ckan/data/index
          name: solr-data
      volumes:
      - name: solr-data
        emptyDir: {}
        #persistentVolumeClaim:
          #claimName: dgpaas-solr
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ckan-solr-svc
  name: solr
spec:
  ports:
  - port: 8983
    protocol: TCP
    targetPort: 8983
  selector:
    app: ckan-solr
status:
  loadBalancer: {}
