thai-gdc/kubernetes/dga/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ckan-postgis
  name: ckan-postgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ckan-postgis
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ckan-postgis
    spec:
      containers:
      - image: 759076157369.dkr.ecr.ap-southeast-1.amazonaws.com/ckan-postgres:v1
        imagePullPolicy: Always
        name: ckan-postgis
        livenessProbe:
            exec:
              command:
              - pg_isready
              - -U
              - $(POSTGRES_USER)
        readinessProbe:
           initialDelaySeconds: 3
           tcpSocket:
              port: 5432              
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      volumes:
      - name: pgdata
        #emptyDir: {}
        persistentVolumeClaim:
          claimName: postgres-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ckan-postgis-svc
  name: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: ckan-postgis
status:
  loadBalancer: {}
